[project]
name="shufflepy"
description="Connect to your favorite APIs with a single line of code."
version="0.0.1"
dependencies=[
	"requests"
]
requires-python=">= 3.6"
authors=[
  {name="Frikky", email="support@shuffler.io"}
]
maintainers=[
  {name="Frikky", email="support@shuffler.io"}
]
readme="README.md"
keywords=["automate", "api", "rest", "requests", "http", "client", "integration", "shuffle", "shuffler", "shuffler.io"]
